[metadata]
name = netmikio
version = 1.0.1
author = Anton Hultberg
author_email = anton@tpo.se
description = Asynchronous SSH handler based on Netmiko for managing network devices.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    netmiko >= 4.1.2

zip_safe = True
include_package_data = True

[options.package_data]
netmikio.netmikio = *.json, *.txt, *.py
netmikio = *.json, *.txt, *.py, *.md


